# Vulpes-Engine

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  VulpesEngine.sln  vulpes.vcxproj
Extra Files/: io_export_vem.py
Libraries/: glew32s.lib  glfw3.lib  glfw3d.lib  libpng32d.lib  zlib32.lib  zlib32d.lib
Shaders/: envlut.fs  geometryPass.fs  geometryPass.vs  lightPass.fs  lightPass.vs  prefilter.fs  prefilter.vs  shaders_readme.txt
blender-plugin/io_export_vem/: __init__.py  export_vem.py  export_ves.py
include/vulpes/: Camera.hpp  CustomRenderer.hpp  DDSParser.hpp  DeferredRenderer.hpp  Engine.hpp  Export.hpp  FPSCamera.hpp  Mesh.hpp  (+25 more)
src/: Camera.cpp  CustomRenderer.cpp  DDSParser.cpp  DeferredRenderer.cpp  Engine.cpp  FPSCamera.cpp  ForwardRenderer.cpp  GBuffer.cpp  HDRParser.cpp  ImageParser.cpp  InputHandler.cpp  Logger.cpp  Logger.h  PointLight.cpp  RenderTarget.cpp  RenderableObject.cpp  Renderer.cpp  ResourceCache.cpp  ResourceLoader.cpp  Scene.cpp  SceneObject.cpp  Skeleton.cpp  Transformation.cpp  VEMParser.cpp  VESParser.cpp  Window.cpp
vulpes/: Camera.cpp  CustomRenderer.cpp  DDSParser.cpp  DeferredRenderer.cpp  Engine.cpp  FPSCamera.cpp  ForwardRenderer.cpp  GBuffer.cpp  HDRParser.cpp  ImageParser.cpp  InputHandler.cpp  InternalResourceLoader.cpp  InternalResourceLoader.h  Logger.cpp  Logger.h  Material.cpp  PointLight.cpp  RenderTarget.cpp  RenderableFactory.cpp  RenderableObject.cpp  Renderer.cpp  ResourceCache.cpp  ResourceLoader.cpp  Scene.cpp  SceneObject.cpp  Transformation.cpp  Window.cpp  vulpes.vcxproj  vulpes.vcxproj.filters
(+53 files in other folders)
